# MA-110

./: .gitignore  CMakeLists.txt  Cycle.cpp  Cycle.h  main.cpp
Tests/: CycleTest.cpp
